# catholic-liturgy-tools

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  _config.yml  index.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: copilot-instructions.md
.github/prompts/: speckit.constitution.prompt.md  speckit.specify.prompt.md
.github/workflows/: publish-content.yml  publish-daily-message.yml
.specify/memory/: constitution.md
_posts/: 2025-11-22-daily-message.md
_site/: index.html
_site/messages/: 2025-11-23-daily-message.md  2025-11-24-daily-message.md  2025-11-25-daily-message.md  2025-11-30-daily-message.md  2025-12-01-daily-message.md  2025-12-02-daily-message.md  2025-12-03-daily-message.md  2025-12-04-daily-message.md  2025-12-05-daily-message.md  2025-12-06-daily-message.md  2025-12-07-daily-message.md  2025-12-08-daily-message.md  2025-12-09-daily-message.md  2025-12-10-daily-message.md  2025-12-11-daily-message.md  2025-12-12-daily-message.md  2025-12-13-daily-message.md  2025-12-14-daily-message.md  2025-12-15-daily-message.md  2025-12-16-daily-message.md  2025-12-17-daily-message.md  2025-12-18-daily-message.md  2025-12-19-daily-message.md  2025-12-20-daily-message.md  2025-12-21-daily-message.md  2025-12-22-daily-message.md  2025-12-23-daily-message.md  2025-12-24-daily-message.md  2025-12-26-daily-message.md  2025-12-27-daily-message.md  2025-12-28-daily-message.md  2025-12-29-daily-message.md  2025-12-30-daily-message.md  (+197 more)
data/: prayers.json
readings/: 2025-11-24.html
tests/: conftest.py
(+337 files in other folders)
